...
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <!-- QR Code ImageView -->
    <ImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.85" />

    <!-- Generate Unique QR Code Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/generateQrCodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Generate Unique QR Code"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
...
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <!-- Home Page Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Home Page"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
...
