...
            android:text="Event Name"
            android:fontFamily="@font/bold1"
            android:textSize="18sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/attendeeCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold1"
            android:text="Attendee Count: 0"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
...

                android:text="Qr code"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewMapButton"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:elevation="2dp"

...
        </LinearLayout>

    </LinearLayout>


    <ImageButton
        android:id="@+id/expandButton"
        android:layout_width="34dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:background="#0000"
        android:padding="10dp"
...
