...
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/organizerNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold1"
            android:hint="Organizer Name" />
    </com.google.android.material.textfield.TextInputLayout>

...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/allEventsTextView"
        app:layout_constraintBottom_toTopOf="@+id/createNewEventButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createNewEventButton"
...
